--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,46 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+#title {
+  text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#grid {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  align-items: center;
+  border: 5px solid black;
+  height: 500px;
+  width: 500px;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
+#box {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  font-size: 10px;
+  height: 98px;
+  width: 98px;
+  border: 1px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  text-align: center;
+}
+
+#startButton {
+  margin: 0 5px 0 10px;
+}
+
+#resetButton {
+  margin: 0 5px 0 10px;
+}
+
+#nextGameButton {
+  margin: 0 5px 0 10px;
 }
