--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 
 #box {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   text-align: center;
   align-items: center;
   font-size: 10px;
@@ -48,7 +48,7 @@
 
 #robot {
   position: relative;
-  left: 200px;
+  margin-left: 2px;
 }
 
 #antenna {
@@ -56,14 +56,14 @@
   height: 20px;
   background: red;
   border-radius: 10px / 5px;
-  margin-left: 10px;
+  margin-left: 40px;
 }
 
 #head {
   width: 20px;
   height: 20px;
   background: gray;
-  margin-left: 5px;
+  margin-left: 35px;
 }
 
 #leftEye {
@@ -94,6 +94,10 @@
   border-radius: 100px / 50px;
 }
 
+#body {
+  display: flex;
+}
+
 #torso {
   /* height: 0;
   width: 14px;
@@ -101,28 +105,32 @@
   border-left: 7.5px solid transparent;
   border-right: 7.5px solid transparent;
   border-radius: 2px 2px 10px 10px; */
+  display: inline-block;
   width: 30px;
   height: 45px;
   background: gray;
 }
 
 #rightArm {
-  transform: rotate(30deg);
-  width: 30px;
-  height: 8px;
-  background: gray;
-  float: left;
-}
-
-#leftArm {
+  display: inline-block;
   transform: rotate(330deg);
   width: 30px;
   height: 8px;
   background: gray;
+  margin-top: 12px;
+}
+
+#leftArm {
+  display: inline-block;
+  transform: rotate(30deg);
+  width: 30px;
+  height: 8px;
+  background: gray;
+  margin-top: 12px;
 }
 
 #foot {
-  /* height: 4px;
+  height: 4px;
   width: 4px;
   background: #ccc;
   border-radius: 4px;
@@ -130,6 +138,6 @@
   position: relative;
   left: 11px;
   top: -1px;
-  z-index: -1; */
+  z-index: -1;
 
 }
